Fixed issue for text too small for pages (#227)
* Fixed issue for text too small for pages

* changes in CSS

--- a/antora-ui-camel/src/css/doc.css
+++ b/antora-ui-camel/src/css/doc.css
@@ -140,6 +140,7 @@
   border-radius: 0.2rem;
   font-size: calc(14 / var(--rem-base) * 1rem);
   padding: 0.075rem 0.25rem 0.125rem;
+  overflow-wrap: break-word;
 }
 
 .doc pre {
@@ -654,5 +655,10 @@ kbd,
   .doc > h1.page:first-child,
   .static > h1:first-child {
     font-size: inherit;
+  }
+
+  .doc p code,
+  .doc thead code {
+    font-size: var(--body-font-size);
   }
 }
